<resources>
    <string name="app_name">PillWell</string>
    <string name="action_settings">Settings</string>

    <string name="title_main">Pill Well</string>

    <string name="sign_in">Sign In</string>
    <string name="bmi">חישוב BMI</string>
    <string name="reminder">תזכורות</string>
    <string name="searchDi">זיהוי מחלה</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_add_reminder">AddReminder</string>
</resources>
