<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@color/colorAccent"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textStyle="bold|italic"
        android:textColor="@color/colorWhite"
        android:textSize="50dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/reminders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goReminders"
                    android:text="@string/reminder"
                    android:visibility="visible" />
                <Space
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/ill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchDi"
                    tools:ignore="OnClick" />

            </LinearLayout>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/pills" />

            <Space
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goSIgnIn"
                    android:text="@string/sign_in" />

                <Space
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi" />

            </LinearLayout>





        </LinearLayout>
    </ScrollView>


</LinearLayout>